<resources>
    <string name="app_name">MyHomeWorkout</string>
    <string name="app_name_space">My Home Workout</string>
    <string name="createAccountInfo">Crear una cuenta te permite tener control de tu progreso.</string>
    <string name="user_input">Usuario:</string>
    <string name="Password_input">Contraseña: (Mínimo 5 caracteres)</string>
    <string name="Password_input2">Confirmar contraseña:</string>
    <string name="LogIn">Iniciar Sesión</string>
    <string name="registro">Registrar cuenta</string>
    <string name="preguntaCuenta">¿Aun no tienes cuenta?</string>
    <string name="crear_cuenta"><u>Crear cuenta</u></string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>

    <string name="entrenamientos">Entrenamientos</string>
    <string name="kilos">Kilos</string>
    <string name="objetivos">Objetivos</string>
    <string name="miPlan">Mi workout plan</string>
    <string name="peso_ideal">Peso Ideal</string>
    <string name="imc">IMC</string>
    <string name="imc2">IMC: </string>
    <string name="meta">Meta</string>
    <string name="horario">Horario</string>
    <string name="peso_actual">Peso actual</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="perfil">Perfil</string>
    <string name="genero">Género</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="nacimiento">Nacimiento</string>

    <string name="estas_a_parte1">¡Estas a </string>
    <string name="estas_a_parte2"> kilos de tu peso ideal!</string>
    <string name="entrenamiento_de_hoy">Entrenamiento de hoy: </string>
    <string name="ver_entrenamiento">Ver entrenamiento</string>
    <string name="mas_ejercicios">Más ejercicios</string>
    <string name="entrenadores">Entrenadores</string>
    <string name="comenzar">Comenzar a entrenar</string>
    <string name="meta2">¿Cuál es tu meta?</string>
    <string name="perderP">Perder peso</string>
    <string name="ganarM">Ganar músculo</string>
    <string name="estarF">Estar en forma</string>
    <string name="tonificar">Tonificar y sentirse saludable</string>
    <string name="crecer">Crecer masa y fuerza</string>
    <string name="motivado">Estar motivado y energético</string>
    <string name="dia">¿Qué días entrenas?</string>
    <string name="hora">¿A qué hora?</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="J">J</string>
    <string name="V">V</string>
    <string name="S">S</string>
    <string name="D">D</string>
    <string name="Inicio">Inicio</string>
    <string name="Fin">Fin</string>
    <string name="peso2">Peso: </string>
    <string name="graficas">Gráficas</string>
    <string name="fotos">Fotos</string>
    <string name="foto_frontal">Foto de frente</string>
    <string name="foto_espalda">Foto de espalda</string>
    <string name="foto_perfil">Foto de lado</string>
    <string name="fotos_explicacion">Estas fotos te ayudaran a conocer tu avance a lo largo de tus entrenamientos.</string>
    <string name="monitorea">Monitorea tu progreso</string>
    <string name="selecciona">Selecciona un intervalo de tiempo para visualizar tu información.</string>
    <string name="previs_rutina_titulo">Rutina de hoy</string>


    <string name="tvDay">Día</string>
    <string name="tvTiempoEstimado">Tiempo Estimado</string>
    <string name="tvNombreEjercicio">Glute bridge</string>

    <string-array name="dayArray">
        <item>Domingo</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--fragment_info-->
    <string name="txtDificultad">NIVEL DE DIFICULTAD</string>
    <string name="txtFocalizacion">FOCALIZACIÓN</string>
    <string name="txtMusculosInv">MÚSCULOS INVOLUCRADOS</string>

    <string name="gender">Ingresa tu género.</string>
    <string name="pesoTxt">Ingresa tu peso</string>
    <string name="alturaTxt">Ingresa tu altura</string>
    <string name="nacimientoTxt">Ingresa tu fecha de nacimiento.</string>
    <string name="fblog">Iniciar con facebook</string>
    <string name="title_activity_main_menu">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_meta">Meta</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_paginaInicial">Página Inicial</string>
    <string name="title_ProfileAct">Profile</string>
    <string name="title_MonitoreoProgreso">Progreso</string>
    <string name="descripcion_4_pasos">Esta información nos ayuda a saber más de ti y calcular con mayor exactitud tu progreso.</string>
    <string name="descripcion_2_pasos">Esta información nos ayuda a acondicionar las rutinas de acuerdo a tu meta y tiempo.</string>

    <string name="felicidades">FELICIDADES, terminaste tu entrenamiento!</string>
</resources>