<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/ivLogo2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvCrearInfo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/createAccountInfo" />

    <TextView
        android:id="@+id/tvUser2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_input"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtNombreRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password_input"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtContrasenaRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvPassword3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password_input2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtContrasenaRegistro2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogIn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circular_btn"
        android:onClick="logIn"
        android:text="@string/registro"
        android:textColor="#FFFFFF" />
</LinearLayout>