<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/box"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDificultad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/txtDificultad"
                    android:textColor="#000000"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/txtInfoDificultad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="TextView"
                    android:textColor="#000000"
                    android:textSize="5sp" />

                <TextView
                    android:id="@+id/txtFocalizacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/txtFocalizacion"
                    android:textColor="#000000"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/txtInfoFoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="TextView"
                    android:textColor="#000000"
                    android:textSize="5sp" />

                <TextView
                    android:id="@+id/txtMusculosInv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/txtMusculosInv"
                    android:textColor="#000000"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/txtInfoMusculosInv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="TextView"
                    android:textColor="#000000"
                    android:textSize="5sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>